@@ -11,8 +11,8 @@ HOSTS:
       - default
       - master
       - client
-    platform:   el-6-x86_64
-    box:        centos/6
+    platform: el-6-x86_64
+    box: centos/6
     hypervisor: <%= hypervisor %>
     yum_repos:
       epel:
@@ -33,6 +33,6 @@ HOSTS:
 CONFIG:
   log_level: verbose
   type: aio
-<% if ENV['BEAKER_PUPPET_ENVIRONMENT'] -%>
-  puppet_environment: <%= ENV['BEAKER_PUPPET_ENVIRONMENT'] %>
+<% if ENV['BEAKER_PUPPET_COLLECTION'] -%>
+  puppet_collection: <%= ENV['BEAKER_PUPPET_COLLECTION'] %>
 <% end -%>
